# keiba_r2

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/rules/: 00-project.md  20-shared.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  experiment.md  ops.md
.github/workflows/: ci.yml
docs/JV-link/: JV-Data仕様書_4.9.0.1.docling.md  JV-Linkインターフェース仕様書_4.9.0.1(Win).docling.md  蓄積系提供データ一覧.docling.md
docs/history/: README.md  active-asset-root.md  archive-map.md  decision-log.md  execution-report-v1-implementation.md  migration-ledger.md  milestones.md  open-hypotheses.md  operational-lessons.md  phase-1-scripts-v3-internal-cleanup.md  phase-2-declarative-config.md  phase-3-cli-removal.md  phase-4-scripts-v3-integration.md
docs/ref/: 1994-benter.md  (+1 more)
keiba_research/: __init__.py  __main__.py
migrations_v3/: 0001_init_core.sql  0002_add_race_age_condition_columns.sql
scripts_v3/: apply_wide_pair_calibrator_v3.py  backtest_v3_common.py  backtest_wide_v3.py  bankroll_v3.py  build_features_base_v3.py  build_features_base_v3_common.py  build_features_v3.py  build_features_v3_te.py  cv_policy_v3.py  evaluate_wide_calibration_v3.py  feature_registry_v3.py  migrate_v3.py  odds_v3_common.py  pl_v3_common.py  rebuild_v3_db.py  rebuild_v3_jsonl_common.py  train_binary_model_v3.py  train_binary_v3_common.py  train_pl_v3.py  train_pl_v3_common.py  train_stacker_v3.py  train_stacker_v3_common.py  train_wide_pair_calibrator_v3.py  tune_binary_optuna_v3.py  tune_stacker_optuna_v3.py  v3_common.py
test_v3/: test_research_repo_contracts.py
(+62 files in other folders)
