[project]
name = "keiba-research"
version = "0.1.0"
description = "Research-first v3 keiba repository with named run, study, and feature-profile workflows."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "psycopg[binary]>=3.2.1",
    "lightgbm>=4.0.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.2.1",
    "tabulate>=0.9.0",
    "tqdm>=4.67.3",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
optuna = ["optuna>=3.6.0"]
xgboost = ["xgboost>=2.0.0"]
catboost = ["catboost>=1.2.0"]
torch = ["torch>=2.4.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"scripts_v3/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["test_v3"]
pythonpath = ["."]
addopts = "-q"
asyncio_mode = "auto"

